trunk/Archive2/b5/d5c4b45c5442c3/output
main.cpp:31:8: error: template parameters not deducible in partial specialization:
 struct tag<triangle<Point>>  
        ^
main.cpp:31:8: note:         'Point'
